--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -1,11 +1,11 @@
-baseURL: "https://hugo-profile.netlify.app"
+baseURL: "https://paulsamir.netlify.app/"
 languageCode: "en-us"
-title: "Hugo Profile"
+title: "Samir Paul"
 theme: hugo-profile
 
 Paginate: 3
-disqusShortname: gurusabarish
-googleAnalytics: G-DWJJVE27WD
+disqusShortname: samirpaul
+googleAnalytics: 
 
 markup:
   goldmark:
@@ -45,10 +45,10 @@ Menus:
     #   weight: 2
 
 params:
-  title: "Hugo Profile"
-  description: Text about my cool site
+  title: "SAMIR PAUL"
+  description: Software Developer
   # staticPath: ""  # The path to serve the static files from
-  favicon: "/fav.png"
+  favicon: "https://raw.githubusercontent.com/SamirPaulb/assets/main/samirpaul-link-github-app_favicon.ico"
 
   # Whether to serve bootstrap css and js files from CDN or not. Can be set to true, "css" or "js" to choose between
   # serving both, only the css, or only the js files through the CDN. Any other value will make so that CDN is not used.
@@ -60,7 +60,7 @@ params:
 
   theme:
     disableThemeToggle: false
-    # defaultTheme: "light" # dark
+    defaultTheme: "light" # dark
 
   # font:
   #   fontSize: 1.5rem # default: 1rem
@@ -103,10 +103,10 @@ params:
   hero:
     enable: true
     intro: "Hi, my name is"
-    title: "Isabella."
+    title: "Samir."
     subtitle: "I build things for the web"
     content: "A passionate web app developer. I tend to make use of modern web technologies to build websites that looks great, feels fantastic, and functions correctly."
-    image: /images/hero.svg
+    image: https://raw.githubusercontent.com/SamirPaulb/assets/main/SamirPaul-image-for-link-webapp-github-samirpaul1.jpg
     button:
       enable: true
       name: "Resume"
@@ -114,10 +114,14 @@ params:
       download: true
     socialLinks:
       fontAwesomeIcons:
+        - icon: fab fa-linkedin
+          url: https://www.linkedin.com/in/SamirPaul
         - icon: fab fa-github
-          url: https://example.com
+          url: https://github.com/SamirPaul1
         - icon: fab fa-twitter
-          url: https://example.com
+          url: https://twitter.com/SamirPaulb
+        - icon: fab fa-instagram
+          url: https://www.instagram.com/SamirPaulb
       customIcons:
         - icon: /fav.png
           url: "https://example.com"
@@ -126,7 +130,7 @@ params:
   about:
     enable: true
     title: "About Me"
-    image: "/images/me.png"
+    image: "https://samirpaul.in/assets/img/profile-img.webp"
     content: |-
       I am a software developer with a passion for web development. I have a background in computer science and mathematics, and I have a strong interest in the intersection of technology and art. I am currently working as a software developer at [example org.](https://example.com) in San Francisco, CA. 
 
@@ -135,8 +139,8 @@ params:
       enable: true
       title: "Here are a few technologies I've been working with recently:"
       items:
-        - "HTML"
-        - "CSS"
+        - "Python"
+        - "C++"
         - "JavaScript"
         - "React"
         - "Node"
@@ -324,14 +328,14 @@ params:
     enable: true
     #title: "Custom name"
     content: My inbox is always open. Whether you have a question or just want to say hi, I’ll try my best to get back to you!
-    email: gurusabarisha@gmail.com
+    email: samirpaulb [at] gmail [dot] com
     btnName: Mail me
 
   footer:
-    # recentPosts: false
+    # recentPosts: true
     socialNetworks:
-      github: https://github.com
-      linkedin: https://linkedin.com
-      twitter: https://twitter.com
-      instagram: https://instagram.com
-      facebook: https://facebook.com
+      linkedin: https://www.linkedin.com/in/SamirPaul
+      github: https://github.com/SamirPaul1
+      twitter: https://twitter.com/SamirPaulb
+      instagram: https://www.instagram.com/SamirPaulb
+      facebook: https://www.facebook.com/SamirPaulb
